--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.2",
   "description": "Configurator base class as a custom registry for gulp",
   "main": "index.js",
-  "engines" : {
-    "node" : ">=12.16.1"
+  "engines": {
+    "node": ">=12.16.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/t2ym/target-configurator",
   "dependencies": {
+    "undertaker": "^1.3.0",
     "undertaker-registry": "^1.0.1"
   }
 }
